Some strange, strange state...

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
   },
   "devDependencies": {
-    "mocha": "*"
+    "mocha": "*",
+    "expect.js": "*"
   },
   "keywords": [
     "hyper",
